# plasma-applet-places-widget

./: CMakeLists.txt  ChangeLog  README.md
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/ui/: FullRepresentation.qml  main.qml
package/contents/ui/config/: ConfigGeneral.qml
